# pkgbuilds

./: .editorconfig  .gitignore  README.md
4pane/: PKGBUILD
abricotine/: .gitignore  PKGBUILD  abricotine.desktop
abricotine-git/: PKGBUILD
absolutely-proprietary/: PKGBUILD
absolutely-proprietary-git/: PKGBUILD
adaptive-gtksourceview-style-scheme-git/: PKGBUILD
adbfs-rootless-git/: PKGBUILD
adw-gtk2-git/: PKGBUILD
adw-gtk3-git/: PKGBUILD
adw-xfwm4-git/: .gitignore  PKGBUILD
adwaita-maia/: .gitignore  PKGBUILD  adwaita-maia-override-install.hook  adwaita-maia-override-install.sh  adwaita-maia-override-remove.hook  adwaita-maia-override-remove.sh  adwaita-maia-override.sh
adwcolor/: PKGBUILD
adwdialog-git/: PKGBUILD
adwmod-theme-git/: PKGBUILD
afdko/: PKGBUILD
ambient-kb/: PKGBUILD
amusiz/: PKGBUILD
anbox-git/: .gitignore  19.patch  PKGBUILD  anbox.patch
anbox-image-gapps/: PKGBUILD
annotator/: PKGBUILD
anoise/: PKGBUILD
anoise-community-extension1/: PKGBUILD
anoise-community-extension2/: PKGBUILD
anoise-community-extension3/: PKGBUILD
anoise-community-extension4/: PKGBUILD
anoise-community-extension5/: PKGBUILD
anoise-git/: PKGBUILD
anoise-gui/: PKGBUILD
anoise-media/: PKGBUILD
anyremote/: PKGBUILD
appanvil-git/: PKGBUILD
appeditor-git/: PKGBUILD
appimagelauncher/: PKGBUILD
appimagelint-git/: PKGBUILD
appimageupdate-git/: PKGBUILD
appnativefy/: PKGBUILD
aptik/: PKGBUILD
aptik-battery-monitor/: PKGBUILD
aptik-git/: PKGBUILD
aptik-gtk/: PKGBUILD
aptik-gtk-git/: PKGBUILD
arronax/: PKGBUILD
athenaeum-git/: PKGBUILD
aura/: PKGBUILD
aurum/: PKGBUILD
aurum-git/: PKGBUILD
authenticator/: PKGBUILD
authy/: PKGBUILD  authy.sh
authy-bin/: PKGBUILD
auto-cpufreq-git/: .gitignore  PKGBUILD  auto-cpufreq.install
autokey/: PKGBUILD
avvie-git/: .gitignore  PKGBUILD
backintime/: PKGBUILD
bat-extras-git/: PKGBUILD
beaver-notes/: .gitignore  PKGBUILD  beaver-notes.desktop  beaver-notes.sh
bibata-adaptabreath-cursors-git/: PKGBUILD
bibata-adaptabreath-git/: PKGBUILD
bibata-cursor-theme/: PKGBUILD
bibata-extra-cursor/: PKGBUILD
bingwall-git/: PKGBUILD
bitsteward-git/: .gitignore  PKGBUILD  bitsteward.desktop  bitsteward.sh
bitwarden/: .gitignore  PKGBUILD  bitwarden.sh  package.json.patch
bitwarden-bin/: PKGBUILD
bitwarden-cli/: PKGBUILD
bllocdesk/: .gitignore  PKGBUILD  bllocdesk  bllocdesk.desktop
blue-recorder-git/: PKGBUILD
blueprint-compiler-git/: PKGBUILD
blueproximity/: PKGBUILD
boxtron/: PKGBUILD
boxtron-git/: PKGBUILD
bpytop/: .gitignore  PKGBUILD  bpytop.desktop
breezex-cursor-theme/: PKGBUILD
brightness-controller-git/: PKGBUILD
browser-mpris2-git/: PKGBUILD
bsf-git/: .gitignore  PKGBUILD  install-dir.patch
bszenlib-git/: PKGBUILD
budgie-windowshuffler-git/: .gitignore  PKGBUILD
byte/: PKGBUILD
cage-git/: PKGBUILD  cage-git.patch  cage.install
caligator-bin/: PKGBUILD
cameractrls/: PKGBUILD
canta-theme-git/: PKGBUILD
carapace36-gnome-shell-theme-git/: PKGBUILD
cast-to-tv-desktop-addon/: PKGBUILD
cast-to-tv-links-addon/: PKGBUILD
castor/: PKGBUILD
catt/: PKGBUILD
catt-qt/: .gitignore  PKGBUILD  catt-qt.desktop
cef-git/: PKGBUILD
cef-minimal/: PKGBUILD
cef-minimal-3809/: PKGBUILD
celeste/: PKGBUILD
cglm/: PKGBUILD
cheat/: PKGBUILD
cheat-git/: PKGBUILD  cheat-git-2.4.0-1-any.pkg.tar.xz
chezetc/: .gitignore  PKGBUILD  tomllib.patch
chkservice/: PKGBUILD
chkservice-git/: PKGBUILD
chromecast_mpris/: PKGBUILD
chromeos-gtk-theme-git/: .gitignore  PKGBUILD  chromeos-gtk-theme.install
chromium-vaapi-bin/: .gitignore  PKGBUILD
cinnamon-applet-desktop-capture/: PKGBUILD
clapgrep/: .nvchecker.toml  PKGBUILD
classyshark/: PKGBUILD  classyshark  classyshark.desktop
classyshark-bin/: .gitignore  PKGBUILD  classyshark.desktop
clevo-fancontrol-git/: .gitignore  PKGBUILD  clevo-fancontrol.service
clevo-indicator-git/: PKGBUILD
clight-git/: PKGBUILD
clight-gui-git/: PKGBUILD  clight-gui.desktop
clightd-git/: PKGBUILD
cloudflared-bin/: .gitignore  PKGBUILD  cloudflared@.service
cloudy-gtk-theme-git/: PKGBUILD
collision/: .gitignore  PKGBUILD
command-not-found/: PKGBUILD
commit/: PKGBUILD
conecto-git/: PKGBUILD
conky-git/: PKGBUILD
conky-i3-git/: PKGBUILD
conky-manager2-git/: .gitignore  PKGBUILD
copyq/: PKGBUILD
copyq-git/: PKGBUILD
cosmic-applets-git/: PKGBUILD
cover-thumbnailer-git/: PKGBUILD
cpx/: PKGBUILD
dailydriver/: PKGBUILD
darkmod/: PKGBUILD
ddcopy/: PKGBUILD
ddcui-git/: PKGBUILD
ddcutil/: PKGBUILD
decoder/: PKGBUILD
deezloader-remix-bin/: PKGBUILD
deezloader-remix-git/: .gitignore  PKGBUILD  deezloader-remix.desktop
desktop-dimmer/: PKGBUILD
devilutionx/: .gitignore  PKGBUILD
devtoolbox/: PKGBUILD
dewduct/: PKGBUILD
dflynav/: .gitignore  PKGBUILD  dragonfly.desktop
dnschanger-desktop/: .gitignore  PKGBUILD  dnschanger.desktop  dnschanger.sh  target.patch
docoloco/: .gitignore  PKGBUILD  docoloco.sh  syntax-fix.patch
dragonfly-navigator-git/: PKGBUILD
drill-search/: .gitignore  PKGBUILD
dusklight/: PKGBUILD
dvm/: PKGBUILD
dxvk-bin/: PKGBUILD
eartag/: PKGBUILD
easyeffects/: PKGBUILD
ecode-bin/: .gitignore  PKGBUILD
eddie-ui/: PKGBUILD
efibooteditor/: .nvchecker.toml  PKGBUILD
efiboots-git/: PKGBUILD
egl-gbm/: .gitignore  PKGBUILD
egl-x11/: PKGBUILD
electron-builder/: PKGBUILD
electronmail/: PKGBUILD  electronmail.desktop  electronmail.sh
elementary-byte/: PKGBUILD
elementary-frog/: .gitignore  PKGBUILD  frog.install
liborcania/src/orcania-2.1.1/: .gitignore  .travis.yml  API.md  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  liborcania.pc.in
liborcania/src/orcania-2.1.1/.github/workflows/: ccpp.yml
liborcania/src/orcania-2.1.1/doc/: doxygen.cfg
liborcania/src/orcania-2.1.1/include/: orcania-cfg.h.in
liborcania/src/orcania-2.1.1/src/: Makefile  base64.c  memory.c  orcania.c
liborcania/src/orcania-2.1.1/test/: Makefile  memory_test.c  pointer_list_test.c  split_test.c  str_test.c
(+981 files in other folders)
